--- a/calidad_aire/templates/calidad_aire/formularioAgregar.html
+++ b/calidad_aire/templates/calidad_aire/formularioAgregar.html
@@ -3,18 +3,24 @@
 <div class="container">
     <h1>Agregar Elemento</h1>
     <form method="get" action="agregar">
-        <input type="number" name="value" required>
-        <!--<input type="text" name="codigo" required>
-        <input type="text" name="latitud" required>
-        <input type="text" name="longitud" required>
-        <input type="number" name="area" required>
+        <label>Valor Medicion</label><br>
+        <input type="number" name="value" required><br><br><br>
+        <label>Codigo</label><br>
+        <input type="text" name="codigo" required><br><br><br>
+        <label>Latitud</label><br>
+        <input type="text" name="latitud" required><br><br><br>
+        <label>Longitud</label><br>
+        <input type="text" name="longitud" required><br><br><br>
+        <label>Area</label><br>
+        <input type="number" name="area" required><br><br><br>
+        <label>Producto</label><br>
         <select name="producto" required>
             <option value="Leche">Leche</option>
             <option value="Cacao">Cacao</option>
             <option value="Flores">Flores</option>
             <option value="Hortalizas">Hortalizas</option>
             <option value="Carne">Carne</option>
-        </select>-->
+        </select><br><br><br>
         <button type="submit">Agregar</button>
     </form>
     </form>
