--- a/calidad_aire/templates/calidad_aire/calidad_aire.html
+++ b/calidad_aire/templates/calidad_aire/calidad_aire.html
@@ -2,8 +2,6 @@
 {% block content %}
 <div class="container">
     <form method="get">
-        <label>Valor Medicion</label><br>
-        <input type="number" name="value" required><br><br><br>
         <label>Codigo</label><br>
         <input type="text" name="codigo" required><br><br><br>
         <label>Latitud</label><br>
@@ -11,7 +9,7 @@
         <label>Longitud</label><br>
         <input type="text" name="longitud" required><br><br><br>
         <label>Area</label><br>
-        <input type="number" name="area" required><br><br><br>
+        <input type="text" name="area" required><br><br><br>
         <label>Producto</label><br>
         <select name="producto" required>
             <option value="Leche">Leche</option>
