--- a/calidad_aire/templates/calidad_aire/formularioAgregar.html
+++ b/calidad_aire/templates/calidad_aire/formularioAgregar.html
@@ -3,8 +3,6 @@
 <div class="container">
     <h1>Agregar Elemento</h1>
     <form method="get" action="agregar">
-        <label>Valor Medicion</label><br>
-        <input type="number" name="value" required><br><br><br>
         <label>Codigo</label><br>
         <input type="text" name="codigo" required><br><br><br>
         <label>Latitud</label><br>
@@ -12,7 +10,7 @@
         <label>Longitud</label><br>
         <input type="text" name="longitud" required><br><br><br>
         <label>Area</label><br>
-        <input type="number" name="area" required><br><br><br>
+        <input type="text" name="area" required><br><br><br>
         <label>Producto</label><br>
         <select name="producto" required>
             <option value="Leche">Leche</option>
